--- a/TugasDataWarehouse.ipynb
+++ b/TugasDataWarehouse.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import seaborn as sns"
+    "%matplotlib inline\n",
+    "plt.style.use('seaborn')"
    ]
   },
   {
@@ -105,8 +105,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('iris.csv')\n",
-    "df.head(5)"
+    "iris = pd.read_csv('iris.csv')"
    ]
   },
   {
@@ -114,14 +113,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iris.shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iris.head()"
+   ]
   }
  ],
  "metadata": {
